--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -2,7 +2,8 @@
     {
         "id":1,
         "title": "AserSeguridad",
-        "description": "A safety and health at work Website for AserSeguridad Client, it was created in Angular with forms in HubSpot.",
+        "descriptionES": "Un sitio web de Salud y seguridad en el trabajo para el cliente Aserseguridad, fue creada en Angular con formularios en HubSpot.",
+        "descriptionUS": "A safety and health at work Website for AserSeguridad Client, it was created in Angular with forms in HubSpot.",
         "image": "images/projects/angular/aserseguridad.jpg",
         "tech" :[
             "angular",
@@ -18,7 +19,8 @@
     {
         "id":2,
         "title": "Dorado TV",
-        "description": "A catalog of audiovisual artists, the data from API Rest",
+        "descriptionES": "Un catalogo de artistas audivisuales, toda la información viene desde una API Rest",
+        "descriptionUS": "A catalog of audiovisual artists, all the data from an API Rest",
         "image": "images/projects/angular/doradotv.jpg",
         "tech" :[
             "angular",
@@ -33,7 +35,8 @@
     {
         "id":3,
         "title": "Workflow diagram",
-        "description": "To create workflow diagram through forms that created the elements with BPMN.js library",
+        "descriptionES": "Para crear flujos de trabajo a través de formularios que crea elementos con la libreria BPMN.js",
+        "descriptionUS": "To create workflow diagram through forms that created the elements with BPMN.js library",
         "image": "images/projects/react/BPMN-diagram.jpg",
         "tech" :[
             "react",
@@ -47,7 +50,8 @@
     {
         "id":4,
         "title": "Triqui game",
-        "description": "It was created to practice React as a personal project",
+        "descriptionES": "Fue creado para practicar React como un projecto personal",
+        "descriptionUS": "It was created to practice React as a personal project",
         "image": "images/projects/react//triqui-game.jpg",
         "tech" :[
             "react",
